[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repolens"
version = "0.1.0"
description = "Privacy-first AI repository documentation agent using offline AST parsing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Open Source Community"}
]
keywords = ["ast", "documentation", "ai", "llm", "openai", "architecture"]
dependencies = [
    "pydantic>=2.6,<3.0"
]

[project.scripts]
repolens = "repolens.cli.main:run"

[tool.setuptools.packages.find]
where = ["src"]